fix: change markdown code dark mode style

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,9 +48,6 @@
     color: var(--textSecondary);
   }
 
-  pre {
-    color: var(--textPrimary);
-  }
 
   hr {
     height: 1px;
